# fib-fast

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
profiles/: capture.sleepy  recursiveDebug.sleepy  releasesleepy.sleepy
release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
release/.cmake/api/v1/reply/: cache-v2-2b62cf62b94db38b4077.json  cmakeFiles-v1-92d1753e00aada3d799c.json  codemodel-v2-435b24d3e677c514726e.json  directory-_deps.googletest-build-Release-7e170a3f35bfc3b3c8bc.json  directory-_deps.googletest-build.googlemock-Release-96661545de43ab60f23d.json  directory-_deps.googletest-build.googletest-Release-ddd900662c33199ee7b1.json  index-2024-12-21T18-35-04-0446.json  target-FibFast-Release-0a9db8733bcada8f88de.json  target-FibFast_Lib-Release-3fe541b6f1aceb3b8e58.json  target-gmock-Release-64c63603c585709d5ed7.json  target-gmock_main-Release-21e8136a625d3dd223f9.json  target-gtest-Release-04a854bc9f28d7a761b7.json  target-gtest_main-Release-a58728b4fd7f1c362fed.json  target-spdlog-Release-449cc05a40f8d6f92ec1.json  target-utilTest-Release-3a7109a1e3bfad9f58b3.json  toolchains-v1-77c385d97f0d14c6d5db.json
release/Testing/: TAG
release/Testing/20241215-2154/: Test.xml
release/Testing/20241217-0644/: Test.xml
release/Testing/20241218-1504/: Test.xml
release/Testing/20241221-1346/: Test.xml
release/tests/: CTestTestfile.cmake  cmake_install.cmake  tests[1]_include.cmake
scripts/: fast.py  naive.py  testBoth.bash
src/: Timer.h  arguments.cpp  arguments.h  assert.h  base.h  core.h  fib.h  fibLinear.cpp  fibMatrix.cpp  logger.cpp  logger.h  main.cpp  sciNumber.cpp  sciNumber.h  util.h
src/algorithm/: fibDouble.cpp  fibDoubleRec.cpp  fibLinear.cpp  fibMatrix.cpp
tests/: CMakeLists.txt  tests.cpp  utilTest.cpp
